# yolo-onnx-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml
.github/workflows/: cmake-single-platform.yml
include/: safe.h  thread_safe_queue.h  vedio_pipline.h  yolov8_detector.h
src/: main.cpp
